<resources>
    <string name="app_name">Cga</string>
    <string name="home">首頁</string>
    <string name="logout">登出</string>
    <string name="regulations">海巡法規</string>
    <string name="bulletin">射擊通報</string>
    <string name="statistics">海巡統計</string>
    <string name="servicejob">標準作業程序</string>
    <string name="specialship">特殊船舶</string>
    <string name="learning">數位學習</string>
    <string name="commonship">常見船舶</string>
    <string name="reset">變更密碼</string>
    <string name="organization">組織</string>
    <string name="affairs">內政</string>
    <string name="deal">處務</string>
    <string name="download">檔案下載</string>
    <string name="next">下一頁</string>
    <string name="previous">上一頁</string>
    <string name="start_quiz">開始學後評量</string>
    <string name="quiz">學後評量</string>
    <string name="imo">IMO碼</string>
    <string name="imo_hint">IMO編號</string>
    <string name="PdfDownload">下載PDF</string>

    <string name="login_api_url">http://www.cga.gov.tw/CgaSearchZone/api/common/login</string>
    <string name="feature_api_url">http://www.cga.gov.tw/CgaSearchZone/api/user/find/features/by/parent</string>
    <string name="regulations_api_url">http://www.cga.gov.tw/CgaSearchZone/api/user/find/regulations/list</string>
    <string name="bulletin_api_url">http://www.cga.gov.tw/CgaSearchZone/api/user/find/bulletin/list</string>
    <string name="statistics_api_url">http://www.cga.gov.tw/CgaSearchZone/api/user/find/statistics/by/id</string>
    <string name="statisticsMenus_api_url">http://www.cga.gov.tw/CgaSearchZone/api/user/find/statistics/menus</string>
    <string name="servicejob_api_url">http://www.cga.gov.tw/CgaSearchZone/api/user/find/service/job/sop</string>
    <string name="specialship_api_url">http://www.cga.gov.tw/CgaSearchZone/api/user/find/special/ship/list</string>
    <string name="learning_api_url">http://www.cga.gov.tw/CgaSearchZone/api/user/learning/find/materials/list</string>
    <string name="commonship_api_url">http://www.cga.gov.tw/CgaSearchZone/api/user/find/common/ship/list</string>
    <string name="reset_api_url">http://www.cga.gov.tw/CgaSearchZone/api/user/password/reset</string>
    <string name="question_api_url">http://www.cga.gov.tw/CgaSearchZone/api/user/learning/find/questions/list</string>
    <string name="save_api_url">http://www.cga.gov.tw/CgaSearchZone/api/user/learning/save</string>
    <string name="report_api_url">http://www.cga.gov.tw/CgaSearchZone/api/user/learning/report/page</string>
    <string name="report_all_api_url">http://www.cga.gov.tw/CgaSearchZone/api/user/learning/report/all</string>

</resources>
